# housekeeping

./: .gitignore  .reviewboardrc  LICENSE  NEWS.md  README.md  dev-requirements.txt  pyproject.toml  tox.ini
housekeeping/: __init__.py  _version.py  base.py  classes.py  functions.py  helpers.py  modules.py
housekeeping/tests/: test_classes.py  test_functions.py  test_modules.py  testcases.py
