[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'housekeeping'
description = 'Python utilities for helping deprecate and remove code.'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]
license = { text = 'MIT' }
readme = 'README.md'
requires-python = '>=3.7'
dynamic =  ['version']

dependencies = [
    'typing_extensions>=4.4',
]

keywords = [
    'deprecation',
    'cleanup',
    'code quality',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
]


[project.urls]
homepage = 'https://github.com/beanbaginc/housekeeping'
documentation = 'https://github.com/beanbaginc/housekeeping'
repository = 'https://github.com/beanbaginc/housekeeping'


[tool.setuptools.package-data]
housekeeping = ['py.typed']


[tool.setuptools.dynamic]
version = { attr = 'housekeeping._version.get_package_version' }
